--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "key": "due-dates-calendar",
   "name": "Due Dates Calendar",
-  "version": "1.4.0",
-  "description": "Due Dates Calendar Widget for Youtrack Issues",
+  "version": "1.4.1",
+  "description": "Due Dates Calendar Widget for YouTrack Issues",
   "applicationName": "YouTrack",
-  "author": "Oleg Bakhirev <oleg.bakhirev@gmail.com>",
+  "author": "JetBrains",
   "dependencies": {
     "YouTrack": ">=2017.4.38723",
     "Hub": ">3.0"
