Update to Ring 3.0 and Support of the dark theme

--- a/package.json
+++ b/package.json
@@ -21,31 +21,32 @@
   },
   "dependencies": {
     "@jetbrains/babel-preset-jetbrains": "1.1.0",
-    "@jetbrains/hub-widget-ui": "^1.0.28",
+    "@jetbrains/hub-widget-ui": "^1.0.32",
     "@jetbrains/icons": "1.20.1",
     "@jetbrains/logos": "1.0.5",
-    "@jetbrains/ring-ui": "1.0.0-beta.191",
+    "@jetbrains/ring-ui": "3.0.12",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-polyfill": "6.26.0",
     "classnames": "^2.2.6",
-    "css-loader": "0.28.9",
-    "file-loader": "1.1.6",
+    "css-loader": "3.5.3",
     "html-loader": "0.5.5",
-    "html-webpack-plugin": "2.30.1",
+    "html-webpack-plugin": "3.2.0",
     "hub-dashboard-addons": "0.1.2",
     "moment": "^2.23.0",
     "node-sass": "^4.9.4",
     "postcss-cssnext": "3.1.0",
-    "postcss-loader": "2.1.0",
+    "postcss-loader": "^3.0.0",
     "postcss-modules-values-replace": "3.0.1",
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.6.2",
-    "react": "^16.6.3",
+    "react": "16.8",
     "react-big-calendar": "0.23.0",
-    "react-dom": "^16.6.3",
+    "react-dom": "16.8",
     "redbox-react": "1.5.0",
-    "webpack": "3.11.0",
-    "webpack-dev-server": "3.1.11"
+    "webpack": "4.43.0",
+    "webpack-dev-server": "3.10.3"
   },
   "devDependencies": {
     "@jetbrains/eslint-config": "2.0.0",
@@ -56,6 +57,7 @@
     "chai-as-promised": "7.1.1",
     "chai-dom": "1.7.0",
     "chai-enzyme": "1.0.0-beta.0",
+    "copy-webpack-plugin": "^5.1.1",
     "electron": "1.8.8",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
@@ -72,6 +74,7 @@
     "sinon": "4.3.0",
     "sinon-chai": "2.14.0",
     "stylelint": "^9.10.1",
+    "webpack-cli": "^3.3.11",
     "xvfb-maybe": "0.2.1",
     "yo": "2.0.1"
   },
