--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint": "eslint . && npm run stylelint",
     "stylelint": "stylelint --ignore-path .gitignore **/*.css",
     "ci-test": "npm run lint && xvfb-maybe karma start --teamcity",
-    "start": "webpack-dev-server -d --history-api-fallback --inline --hot --colors --port 9010"
+    "start": "webpack-dev-server -d --history-api-fallback --inline --hot --colors --port 9010",
+    "i18n:extract": "angular-gettext-cli --files \"{src/**/*.js,node_modules/hub-dashboard-addons/components/**/*.js,node_modules/@jetbrains/hub-widget-ui/src/**/*.js}\" --dest src/app/translations/default.pot --marker-name=i18n --module-method-plural=plural --module-name=i18n"
   },
   "babel": {
     "presets": "@jetbrains/jetbrains"
@@ -25,6 +26,7 @@
     "@jetbrains/icons": "1.20.1",
     "@jetbrains/logos": "1.0.5",
     "@jetbrains/ring-ui": "3.0.12",
+    "angular-gettext-cli": "1.2.0",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-polyfill": "6.26.0",
