--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@jetbrains/logos": "1.0.5",
     "@jetbrains/ring-ui": "3.0.12",
     "angular-gettext-cli": "1.2.0",
+    "angular-gettext-loader": "1.0.1",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-polyfill": "6.26.0",
@@ -47,6 +48,7 @@
     "react-big-calendar": "0.23.0",
     "react-dom": "16.8",
     "redbox-react": "1.5.0",
+    "json-loader": "0.5.7",
     "webpack": "4.43.0",
     "webpack-dev-server": "3.10.3"
   },
