--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "npm rebuild node-sass",
     "create-component": "yo @jetbrains/ring-ui:react --path $npm_package_config_components",
     "build": "webpack -p --devtool sourcemap",
+    "build-nomaps": "webpack -p",
     "test": "karma start",
     "lint": "eslint . && npm run stylelint",
     "stylelint": "stylelint --ignore-path .gitignore **/*.css",
