--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "redbox-react": "1.5.0",
     "json-loader": "0.5.7",
     "webpack": "4.43.0",
-    "webpack-dev-server": "3.10.3"
+    "webpack-dev-server": "3.10.3",
+    "date-arithmetic": "latest"
   },
   "devDependencies": {
     "@jetbrains/eslint-config": "2.0.0",
