span-events implementation

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build-nomaps": "webpack -p",
     "lint": "eslint . && npm run stylelint",
     "stylelint": "stylelint --ignore-path .gitignore **/*.css",
-    "start": "webpack-dev-server -d --history-api-fallback --inline --hot --colors --port 9010",
+    "start": "webpack-dev-server -d --history-api-fallback --inline --colors --port 9010",
     "i18n:extract": "angular-gettext-cli --files \"{src/**/*.js,node_modules/hub-dashboard-addons/components/**/*.js,node_modules/@jetbrains/hub-widget-ui/src/**/*.js}\" --dest src/app/translations/default.pot --marker-name=i18n --module-method-plural=plural --module-name=i18n"
   },
   "babel": {
