cleanup, fix span-events various issues

--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "babel-polyfill": "6.26.0",
     "classnames": "^2.2.6",
     "css-loader": "3.5.3",
-    "date-arithmetic": "latest",
+    "date-arithmetic": "4.1.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "hub-dashboard-addons": "0.1.2",
     "json-loader": "0.5.7",
-    "moment": "^2.23.0",
-    "node-sass": "^4.12.0",
+    "moment": "2.30.1",
+    "sass": "1.79.5",
     "postcss-cssnext": "3.1.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
@@ -46,7 +46,7 @@
     "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.6.2",
     "react": "16.14",
-    "react-big-calendar": "0.23.0",
+    "react-big-calendar": "0.29.0",
     "react-dom": "16.8",
     "redbox-react": "1.5.0",
     "webpack": "4.43.0",
